music-data: implement external relations binding